--- a/features.html
+++ b/features.html
@@ -5,20 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features - AMHIS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif; background-color: #f8f9fa; color: #333;">
+
     <!-- Navbar -->
-    <!-- Add navbar code as above -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding: 15px;">
+        <div class="container">
+            <a class="navbar-brand" href="#" style="font-size: 1.8em; font-weight: bold; color: #00adb5;">AMHIS</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: #ddd; margin-right: 15px;">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: #ddd; margin-right: 15px;">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#" style="color: #00adb5; margin-right: 15px;">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" style="color: #ddd; margin-right: 15px;">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Features Section -->
-    <div class="container mt-5">
-        <h2>Features of AMHIS</h2>
-        <ul>
-            <li>Automated mental health assessment through machine learning.</li>
-            <li>Personalized recommendations based on health indicators.</li>
-            <li>Focus on career, health, and relationship categories.</li>
-        </ul>
+    <div style="background-color: #ffffff; padding: 60px 0;">
+        <div class="container">
+            <h2 class="text-center mb-5" style="font-size: 2.5em; color: #333;">Features of AMHIS</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div style="background: #f1f1f1; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                        <div style="font-size: 3em; color: #00adb5; margin-bottom: 15px;"><i class="fas fa-brain"></i></div>
+                        <h4 style="font-size: 1.5em; color: #333; margin-bottom: 10px;">Automated Assessment</h4>
+                        <p style="color: #666;">Using machine learning to provide an automated mental health assessment.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div style="background: #f1f1f1; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                        <div style="font-size: 3em; color: #00adb5; margin-bottom: 15px;"><i class="fas fa-user-cog"></i></div>
+                        <h4 style="font-size: 1.5em; color: #333; margin-bottom: 10px;">Personalized Recommendations</h4>
+                        <p style="color: #666;">Get recommendations tailored to your health indicators and personal needs.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div style="background: #f1f1f1; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+                        <div style="font-size: 3em; color: #00adb5; margin-bottom: 15px;"><i class="fas fa-heart"></i></div>
+                        <h4 style="font-size: 1.5em; color: #333; margin-bottom: 10px;">Comprehensive Focus</h4>
+                        <p style="color: #666;">Assessments cover career, health, and relationship categories.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
