--- a/features.html
+++ b/features.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
-<body style="font-family: Arial, sans-serif; background-color: #f8f9fa; color: #333;">
+<body style="font-family: Arial, sans-serif; margin: 0; background: linear-gradient(135deg, #00adb5, #393e46); color: #fff;">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding: 15px;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 15px; background-color: rgba(0, 0, 0, 0.8);">
         <div class="container">
-            <a class="navbar-brand" href="#" style="font-size: 1.8em; font-weight: bold; color: #00adb5;">AMHIS</a>
+            <a class="navbar-brand" href="#" style="font-size: 1.8em; font-weight: bold; color: #ffd369; animation: fadeIn 1s ease-in-out;">AMHIS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -20,7 +20,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="#" style="color: #ddd; margin-right: 15px;">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: #ddd; margin-right: 15px;">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#" style="color: #00adb5; margin-right: 15px;">Features</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#" style="color: #ffd369; margin-right: 15px;">Features</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: #ddd; margin-right: 15px;">Contact</a></li>
                 </ul>
             </div>
@@ -28,34 +28,65 @@
     </nav>
 
     <!-- Features Section -->
-    <div style="background-color: #ffffff; padding: 60px 0;">
+    <div style="padding: 60px 0; animation: fadeInUp 1s ease-in-out;">
         <div class="container">
-            <h2 class="text-center mb-5" style="font-size: 2.5em; color: #333;">Features of AMHIS</h2>
+            <h2 class="text-center mb-5" style="font-size: 2.5em; color: #ffd369; animation: slideDown 1s ease-in-out;">Features of AMHIS</h2>
             <div class="row">
+                <!-- Feature 1 -->
                 <div class="col-md-4">
-                    <div style="background: #f1f1f1; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
-                        <div style="font-size: 3em; color: #00adb5; margin-bottom: 15px;"><i class="fas fa-brain"></i></div>
-                        <h4 style="font-size: 1.5em; color: #333; margin-bottom: 10px;">Automated Assessment</h4>
-                        <p style="color: #666;">Using machine learning to provide an automated mental health assessment.</p>
+                    <div style="background: rgba(255, 255, 255, 0.1); padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); margin-bottom: 20px; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                        <div style="font-size: 3em; color: #ffd369; margin-bottom: 15px; animation: bounce 2s infinite;"><i class="fas fa-brain"></i></div>
+                        <h4 style="font-size: 1.5em; color: #fff; margin-bottom: 10px;">Automated Assessment</h4>
+                        <p style="color: #ccc;">Using machine learning to provide an automated mental health assessment.</p>
                     </div>
                 </div>
+                <!-- Feature 2 -->
                 <div class="col-md-4">
-                    <div style="background: #f1f1f1; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
-                        <div style="font-size: 3em; color: #00adb5; margin-bottom: 15px;"><i class="fas fa-user-cog"></i></div>
-                        <h4 style="font-size: 1.5em; color: #333; margin-bottom: 10px;">Personalized Recommendations</h4>
-                        <p style="color: #666;">Get recommendations tailored to your health indicators and personal needs.</p>
+                    <div style="background: rgba(255, 255, 255, 0.1); padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); margin-bottom: 20px; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                        <div style="font-size: 3em; color: #ffd369; margin-bottom: 15px; animation: bounce 2s infinite;"><i class="fas fa-user-cog"></i></div>
+                        <h4 style="font-size: 1.5em; color: #fff; margin-bottom: 10px;">Personalized Recommendations</h4>
+                        <p style="color: #ccc;">Get recommendations tailored to your health indicators and personal needs.</p>
                     </div>
                 </div>
+                <!-- Feature 3 -->
                 <div class="col-md-4">
-                    <div style="background: #f1f1f1; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
-                        <div style="font-size: 3em; color: #00adb5; margin-bottom: 15px;"><i class="fas fa-heart"></i></div>
-                        <h4 style="font-size: 1.5em; color: #333; margin-bottom: 10px;">Comprehensive Focus</h4>
-                        <p style="color: #666;">Assessments cover career, health, and relationship categories.</p>
+                    <div style="background: rgba(255, 255, 255, 0.1); padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); margin-bottom: 20px; transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                        <div style="font-size: 3em; color: #ffd369; margin-bottom: 15px; animation: bounce 2s infinite;"><i class="fas fa-heart"></i></div>
+                        <h4 style="font-size: 1.5em; color: #fff; margin-bottom: 10px;">Comprehensive Focus</h4>
+                        <p style="color: #ccc;">Assessments cover career, health, and relationship categories.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Inline CSS for Animations -->
+    <style>
+        /* Keyframe animations */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes slideDown {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-10px); }
+            60% { transform: translateY(-5px); }
+        }
+
+        /* Hover effects for feature cards */
+        .col-md-4:hover > div {
+            transform: scale(1.05);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
+        }
+    </style>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
